# ufont

./: CMakeLists.txt  README.md
generator/: CMakeLists.txt  main.c  stb_image.h  stb_image_write.h  stb_truetype.h  ufnt_writer.c  ufnt_writer.h
include/: ufont.hpp
src/: header.h  main.c  main.cpp  ufont.hpp  ufont_scaler.hpp
tests/: CMakeLists.txt  Inconsolata-Regular-h32_r8.ufnt  a_char.h  tests.cpp
